More content for the february newsletter
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-0.md
+++ b/site/docs/release-notes/4-0.md
@@ -13,6 +13,12 @@ The notes will be updated until & when 4.0 is released**_
     A number of fields have been removed from the Open Metadata Repository Services (OMRS)'s InstanceType in order to improve the marshalling/unmarshalling performance of open metadata instances.  If your connector has its own methods for populating this element then please amend to remove these obsolete fields.
     ![OpenMetadata Instance Structure](/concepts/open-metadata-instances-structure.svg)
 
+!!! danger "Integration Connector Authors - Note change in Java packages and build dependencies"
+    Version 4.0 adds the [Open Integration Framework (OIF)](/frameworks/oif/overview) to provide the interfaces for an [integration connector](/concepts/integration-connector).  They were originally implemented partly in the [integration daemon services](/services/integration-daemon-services) and the [administration services](/services/admin-services/overview).  The introduction of the OIF creates a cleaner interface for integration connectors.  However, it does have an impact on existing integration connectors:
+    * The build script for the connector needs to include the OIF as a dependency (replacing the integration-daemon-services-api module).
+       * For example, for Gradle use: `compileOnly ':open-metadata-implementation:frameworks:open-integration-framework'`
+    * The package names for the integration connector interfaces change from `org.odpi.openmetadata.governanceservers.integrationdaemonservices.connectors` to `org.odpi.openmetadata.frameworks.integration.connectors`.
+
 ??? functional "Open Metadata Types"
     * New attributes have been added to the [*CollectionMembership*](/types/0/0021-Collections) relationship type to allow the confidence and provenance of a member's inclusion in the collection to be documented.  This is used where collections are being generated from automated processes.
     * New attributes have been added to the [*ActionTarget*](/types/1/0137-Actions) relationship type to allow the status of each element to be acted upon to be managed.  This is important where the actor has to perform work on multiple elements since it allows progress to be recorded.
