--- a/site/docs/release-notes/4-0.md
+++ b/site/docs/release-notes/4-0.md
@@ -29,7 +29,7 @@ The notes will be updated until & when 4.0 is released**_
     * A new attribute called *incidentClassifierCategory* has been added to the [*IncidentClassifierSet*](/types/4/0470-Incident-Reporting) classification type to allow different names classifiers to be defined.
     * The [*AgreementActor*](/type/4/0484-Agreements) relationship is now multi-link.
     * A new relationship called [*InformationSupplyChainLink*](/types/7/0720-Information-Supply-Chains) has been added to show the relationships between the information supply chain segments and the logical sources and destinations of an information supply chain.
-    * Entity types *IntegrationGroup* and *IntegrationConnector* plus new relationship types *RegisteredIntegrationConnector* and *CatalogTarget* are featured in a new model [0464](/types/4/0464-Dynamic-Integration-Groups).
+    * Entity types *IntegrationGroup* and *IntegrationConnector* plus new relationship types *RegisteredIntegrationConnector* and *CatalogTarget* are featured in a new model [0464](/types/4/0464-Dynamic-Integration-Groups).  This model also adds the types for [integration reports](/concepts/integration-reports).
 
 ??? functional "Integration Groups"
     * In this release we have added the ability to dynamically configure an [integration daemon](/concepts/integration-daemon) using [integration groups](/concepts/integration-group).  This enables new integration connectors to be deployed to the integration daemon without needing to restart it.
