Add updates for relase 4.0.
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-0.md
+++ b/site/docs/release-notes/4-0.md
@@ -30,6 +30,8 @@ The notes will be updated until & when 4.0 is released**_
     * The [*AgreementActor*](/type/4/0484-Agreements) relationship is now multi-link.
     * A new relationship called [*InformationSupplyChainLink*](/types/7/0720-Information-Supply-Chains) has been added to show the relationships between the information supply chain segments and the logical sources and destinations of an information supply chain.
     * Entity types *IntegrationGroup* and *IntegrationConnector* plus new relationship types *RegisteredIntegrationConnector* and *CatalogTarget* are featured in a new model [0464](/types/4/0464-Dynamic-Integration-Groups).  This model also adds the types for [integration reports](/concepts/integration-reports).
+    * The [*ControlledGlossaryTerm*](/types/3/0385-Controlled-Glossary-Development) has a new *userDefinedStatus* attribute plus the list of valid instance statuses has been extended to include PROPOSED, REJECTED, DEPRECATED and OTHER. 
+    * A fix has been added to the open metadata archive helper to ensure that the valid instance statuses for a new type are inherited from its super type. The new type may make any changes to the list of valid instance statuses. **Note:** This is a one-time inheritance.  If the super type's valid instance statuses are subsequently extended, the subclasses are not automatically updated.
 
 ??? functional "Integration Groups"
     * In this release we have added the ability to dynamically configure an [integration daemon](/concepts/integration-daemon) using [integration groups](/concepts/integration-group).  This enables new integration connectors to be deployed to the integration daemon without needing to restart it.
