Remove Analytics Modeling OMAS
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-0.md
+++ b/site/docs/release-notes/4-0.md
@@ -34,7 +34,10 @@ The notes will be updated until & when 4.0 is released**_
     * A fix has been added to the open metadata archive helper to ensure that the valid instance statuses for a new type are inherited from its super type. The new type may make any changes to the list of valid instance statuses. **Note:** This is a one-time inheritance.  If the super type's valid instance statuses are subsequently extended, the subclasses are not automatically updated.
 
 ??? functional "Integration Groups"
-    * In this release we have added the ability to dynamically configure an [integration daemon](/concepts/integration-daemon) using [integration groups](/concepts/integration-group).  This enables new integration connectors to be deployed to the integration daemon without needing to restart it.
+    In this release we have added the ability to dynamically configure an [integration daemon](/concepts/integration-daemon) using [integration groups](/concepts/integration-group).  This enables new integration connectors to be deployed to the integration daemon without needing to restart it.
+
+??? functional "Removal of Analytics Modeling OMAS"
+    The deprecated Analytics Modeling OMAS has been removed from the code.  The [Analytic Integrator OMIS](/services/omis/analytics-modeling/overview) now works with the [Data Science OMAS](/services/omas/data-science/overview).
 
 
 
