Updated v4 release notes & made misc. fixes
Signed-off-by: Nigel Jones <nigel.l.jones+git@gmail.com>

--- a/site/docs/release-notes/4-0.md
+++ b/site/docs/release-notes/4-0.md
@@ -7,7 +7,42 @@ _**These are DRAFT release notes, initially copied from the previous release
 The notes will be updated until & when 4.0 is released**_
 
 !!! danger "Special note on Java support"
-    Java 17 is now **required** to build and run Egeria.  The build is now driven by Gradle.
+    Java 17 is now **required** to build and run Egeria.  
+
+!!! danger "The build is now driven by Gradle."
+    [Gradle](https://gradle.org) is now used as the build tool, replacing maven.
+
+    We make use of the [gradle wrapper](https://docs.gradle.org/current/userguide/gradle_wrapper.html) which means there is no need to explicitly install Gradle.
+
+    A build can be started by running `./gradlew build` from the root of the repository.
+
+    Your connectors and applications can continue use Gradle, or you can continue to use Maven. Our artefacts are still available via maven central.
+
+    A BOM (Bill of Materials) is now available for use in your own projects. This makes it easier to align dependencies with those of egeria. To make use of the BOM you can use the following in gradle:
+     
+    ```groovy
+    dependencies {
+        implementation platform('org.odpi.egeria:bom:4.0.0')
+    }
+    ```
+
+    A similar approach can be used with maven:
+
+    ```xml
+        <dependency>
+            <groupId>org.odpi.egeria</groupId>
+            <artifactId>bom</artifactId>
+            <version>4.0.0</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    ```
+    The previous support to build a 'lightweight chassis' can now be performed in gradle using:
+    ```shell
+    ./gradlew build -PadminChassisOnly
+    ```
+
+    The build also now benefits from improved checks to avoid conflicting capabilities & ensure accurate dependencies.
 
 !!! danger "Repository Connector Authors - Note change in InstanceType"
     A number of fields have been removed from the Open Metadata Repository Services (OMRS)'s InstanceType in order to improve the marshalling/unmarshalling performance of open metadata instances.  If your connector has its own methods for populating this element then please amend to remove these obsolete fields.
