Update info on v4 chart releases
Signed-off-by: Nigel Jones <nigel.l.jones+git@gmail.com>

--- a/site/docs/release-notes/4-0.md
+++ b/site/docs/release-notes/4-0.md
@@ -77,6 +77,49 @@ The notes will be updated until & when 4.0 is released**_
 ??? functional "Removal of Analytics Modeling OMAS"
     The deprecated Analytics Modeling OMAS has been removed from the code.  The [Analytic Integrator OMIS](/services/omis/analytics-integrator/overview) now works with the [Data Science OMAS](/services/omas/data-science/overview).
 
+??? functional "Helm Chart versions"
+
+    These charts may get updated more frequently than Egeria code releases, as we integrate other components and fix bugs. You can always check the latest with `helm repo update && helm search repo egeria `
+
+    Note that the Business UI remains at an older version, as the code is currently undergoing some refactoring.
+
+    To see known issues/upcoming work or to report issues see [egeria-charts](https://github.com/odpi/egeria-charts/issues){ target=gh }
+
+    ??? info "Tested environments"
+
+        The Egeria charts have been tested in:
+        
+        * Rancher Desktop v1.8.1 / Kubernetes v1.26.3
+        * Red Hat Openshift 4.12
+
+    ??? info "Lab Chart for 4.0"
+
+         The Egeria lab chart 4.0 has been updated to include:
+
+         * Egeria 4.0
+         * Egeria Ecosystem UI 3.10.0
+         * Egeria Business UI 4.1.1
+         * Strimzi 0.34.0 with Kafka 3.4.0
+         * Jupyter Notebook v3.5.2
+
+
+    ??? info "Base Chart for 3.15"
+
+         The Egeria base chart 3.15.0 has been updated to include:
+
+         * Egeria 4.0
+         * Egeria Ecosystem UI 3.10.0
+         * Strimzi 0.34.0 with Kafka 3.4.0
+
+
+    ??? info "CTS & PTS Charts for 3.15"
+
+         * Egeria 4.0
+         * Strimzi 0.34.0 with Kafka 3.4.0
+
+??? bugs "Bug fixes and other updates"
+
+    For details on core Egeria changes, see the [GitHub release note for 4.0](https://github.com/odpi/egeria/releases/tag/V4.0){ target=gh } and the full [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits/egeria-release-4.0){ target=gh }.
 
 
 --8<-- "snippets/abbr.md"
