Add info on using additional connectors in helm charts
Signed-off-by: Nigel Jones <nigel.l.jones+git@gmail.com>

--- a/site/docs/release-notes/4-0.md
+++ b/site/docs/release-notes/4-0.md
@@ -79,7 +79,7 @@ The notes will be updated until & when 4.0 is released**_
 
 ??? functional "Helm Chart versions"
 
-    These charts may get updated more frequently than Egeria code releases, as we integrate other components and fix bugs. You can always check the latest with `helm repo update && helm search repo egeria `
+    These charts may get updated more frequently than Egeria code releases, as we integrate other components and fix bugs. Some components may be more recent than listed below. You can always check the latest with `helm repo update && helm search repo egeria `
 
     Note that the Business UI remains at an older version, as the code is currently undergoing some refactoring.
 
