--- a/site/docs/release-notes/4-1.md
+++ b/site/docs/release-notes/4-1.md
@@ -12,6 +12,7 @@ The notes will be updated until & when 4.1 is released**_
     * The [*GlossaryTermEvolution*](/types/3/0385-Controlled-Glossary-Development) relationship has been deprecated.
     * New classifications *EditingGlossary* and *EditingGlossaryCopy* have been added to the [*0385*](/types/3/0385-Controlled-Glossary-Development) model to support the controlled glossary development process.
     * A new classification called [*DataFieldValues**](/types/2/0210-Data-Stores) allows the characterization of a collection of data values.
+    * A new attribute called *publishVersionIdentifier* has been added to [GlossaryTerm](/types/3/0330-Terms) to allow authors to control the version of published terms.
 
 ??? functional "New Open Metadata View Services (OMVS)"
     In this release we have added the following view services to aid organizations writing user interfaces (UIs):
