Add descriptions of Apache Atlas and Secrets Store connectors
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-1.md
+++ b/site/docs/release-notes/4-1.md
@@ -20,5 +20,8 @@ The notes will be updated until & when 4.1 is released**_
     * [Glossary Browser OMVS](/services/omvs/glossary-browser/overview)
     * [Glossary Workflow OMVS](/services/omvs/glossary-workflow/overview)
 
+??? functional "Glossary specific security"
+    The [Server Metadata Security Connector](/concepts/server-metadata-security-connector) has been extended with a new optional interface that allows the connector to control authorization requests to glossaries.  See the [Metadata Security](/features/metadata-security/overview) feature for more details.
+
 
 --8<-- "snippets/abbr.md"
