--- a/site/docs/release-notes/4-1.md
+++ b/site/docs/release-notes/4-1.md
@@ -9,8 +9,10 @@ The notes will be updated until & when 4.1 is released**_
 
 ??? functional "Open Metadata Types"
     * A new *sourceVersionNumber* attribute has been added to the [*SourcedFrom*](/types/0/0011-Managing-Referenceables) relationship type to allow the version of the element that is copied to be recorded.
+    * A new classification called [*TemplateSubstitute*](/types/0/0011-Managing-Referenceables) has been added to isolate relationships included in templates from normal metadata queries.
+    * A new classification called [*RootCategory*](/types/3/0320-Category-Hierarchy) has been added to identify *GlossaryCategory* entities that are the top of a category hierarchy.
     * The [*GlossaryTermEvolution*](/types/3/0385-Controlled-Glossary-Development) relationship has been deprecated.
-    * New classifications *EditingGlossary* and *EditingGlossaryCopy* have been added to the [*0385*](/types/3/0385-Controlled-Glossary-Development) model to support the controlled glossary development process.
+    * New classifications *EditingGlossary* and *StagingGlossary* have been added to the [*0385*](/types/3/0385-Controlled-Glossary-Development) model to support the controlled glossary development process.
     * A new classification called [*DataFieldValues**](/types/2/0210-Data-Stores) allows the characterization of a collection of data values.
     * A new attribute called *publishVersionIdentifier* has been added to [GlossaryTerm](/types/3/0330-Terms) to allow authors to control the version of published terms.
 
