Add SampleData relationship
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-1.md
+++ b/site/docs/release-notes/4-1.md
@@ -8,6 +8,7 @@ _**These are DRAFT release notes, initially copied from the previous release
 The notes will be updated until & when 4.1 is released**_
 
 ??? functional "Open Metadata Types"
+    * A new relationship [*SampleData*](/types/0/0010-Basic-Model) links an Asset entity describing a collection of sample data that originates from the resource represented by the Referenceable entity.
     * A new *sourceVersionNumber* attribute has been added to the [*SourcedFrom*](/types/0/0011-Managing-Referenceables) relationship type to allow the version of the element that is copied to be recorded.
     * A new classification called [*TemplateSubstitute*](/types/0/0011-Managing-Referenceables) has been added to isolate relationships included in templates from normal metadata queries.
     * A new classification called [*RootCategory*](/types/3/0320-Category-Hierarchy) has been added to identify *GlossaryCategory* entities that are the top of a category hierarchy.
