Add April's newsletter
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-1.md
+++ b/site/docs/release-notes/4-1.md
@@ -26,5 +26,9 @@ The notes will be updated until & when 4.1 is released**_
 ??? functional "Glossary specific security"
     The [Server Metadata Security Connector](/concepts/server-metadata-security-connector) has been extended with a new optional interface that allows the connector to control authorization requests to glossaries.  See the [Metadata Security](/features/metadata-security/overview) feature for more details.
 
+??? functional "Secrets store connectors"
+    The [Secrets Store Connector](/concepts/secrets-store-connector) enables a connector to access its secrets (passwords, certificates, ...) from a secure location at runtime.
+
+
 
 --8<-- "snippets/abbr.md"
