git800 add hms lister docs
Signed-off-by: David Radley <david_radley@uk.ibm.com>

--- a/site/docs/release-notes/4-1.md
+++ b/site/docs/release-notes/4-1.md
@@ -27,6 +27,10 @@
 ??? functional "Secrets store connectors"
     The [Secrets Store Connector](/concepts/secrets-store-connector) enables a connector to access its secrets (passwords, certificates, ...) from a secure location at runtime.
 
+??? functional "HMS listener"
+    The [Hive Metastore (HMS) listener](/connectors/repository/hms/overview/#using-with-the-hive-metastore-listener) runs in the HMS process,
+    and issues Egerie Events when HMS tables and added, dropped or altered. The git repository for the listener is [https://github.com/odpi/egeria-listener-hms](https://github.com/odpi/egeria-listener-hms).
+
 ??? functional "Other functional fixes and enhancements"
 
     * Fixed CORS support in ui-chassis-spring and code clean-up from previous Spring migration.
