Initial update from server-chassis to platform-chassis
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/1-6.md
+++ b/site/docs/release-notes/1-6.md
@@ -15,9 +15,10 @@ Below are the highlights:
 * There is a new user interface module:
     * The [Repository Explorer :material-dock-window:](https://github.com/odpi/egeria/blob/main/open-metadata-implementation/user-interfaces/ui-chassis/ui-chassis-spring/docs/RepositoryExplorer/RepositoryExplorerGuide.md){ target=gh } (Rex) can help you explore and visualize the metadata in a repository. It retrieves entities and relationships from the repository and displays them. A details panel also shows the properties and other information about an object. Each entity or relationship is added to a network diagram, which shows how they are connected.
 
-* The Swagger-based API documentation for the Egeria server chassis has been reorganized to align with our modules structure & to provide links into our other documentation which also will clarify if the module is released, in Tech Preview, or still in development. The docs can be found at `https://<server>:<port>/swagger-ui.htm`. Further enhancements will follow in future releases.
+* The Swagger-based API documentation for the OMAG Server Platform has been reorganized to align with our modules structure and to provide links into our other documentation which also will clarify if the module is released, in Tech Preview, or still in development. The docs can be found at `https://<server>:<port>/swagger-ui/index.html`. Further enhancements will follow in future releases.
 
 * Many dependencies have been updated including:
+
     * Kafka client upgraded to 2.4.1
     * Spring updated to 5.2.4, spring boot to 2.2.5 & other spring components accordingly.
   
@@ -27,7 +28,6 @@ Below are the highlights:
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.6.png)
  
- Link to Egeria's [Roadmap](/release-notes/roadmap/) for more details about the
- Open Metadata and Governance vision, strategy and content.
+ Link to Egeria's [Roadmap](/release-notes/roadmap/) for more details about the Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
