--- a/site/docs/release-notes/2-0.md
+++ b/site/docs/release-notes/2-0.md
@@ -11,7 +11,7 @@ Release 2.0 adds support for:
 
 Below are the highlights:
 
-- The Egeria server chassis default URL is now https://localhost:9443 - the server now listens on port 9443 and supports https only. All clients have been updated accordingly. At this point SSL certificate validation is disabled.  This will be enabled in a future release.
+- The OMAG Server Platform default URL is now https://localhost:9443 - the platform now listens on port 9443 and supports https only. All clients have been updated accordingly. At this point SSL certificate validation is disabled.  This will be enabled in a future release.
 - Docker containers, docker-compose scripts, kubernetes deployments have all been updated to use https accordingly.
 - The [Encrypted Configuration File Store Connector :material-dock-window:](https://github.com/odpi/egeria/tree/main/open-metadata-implementation/adapters/open-connectors/configuration-store-connectors/configuration-encrypted-file-store-connector){ target=lf } is now used by default to ensure security of sensitive configuration details like credentials.
 
