--- a/site/docs/release-notes/2-8.md
+++ b/site/docs/release-notes/2-8.md
@@ -108,8 +108,7 @@ details for those profiles rather than all details.)
 
 #### Changes to deployment of the Polymer based UI
 
-In previous releases, a zuul router component was used within the UI server chassis to route requests
-for static content to a separate server.
+In previous releases, a zuul router component was used within the Egeria UI Application to route requests for static content to a separate server.
 
 In this release any routing needs to be setup externally, for example by placing a nginx proxy in front of both the ui
 chassis and static content server. This is now done by our docker-compose environment & helm charts so to access
