--- a/site/docs/release-notes/4-0.md
+++ b/site/docs/release-notes/4-0.md
@@ -34,7 +34,7 @@
             <scope>import</scope>
         </dependency>
     ```
-    The previous support to build a 'lightweight chassis' can now be performed in gradle using:
+    The previous support to build a 'lightweight platform' can now be performed in gradle using:
     ```shell
     ./gradlew build -PadminChassisOnly
     ```
