--- a/site/docs/release-notes/4-2.md
+++ b/site/docs/release-notes/4-2.md
@@ -12,6 +12,8 @@ The notes will be updated until & when 4.2 is released**_
 
 ??? functional "OMAG Server Platform"
     * Fixed bug with http headers propagation feature.
+    * The name of the JAR file to start the platform is now `omag-server-platform.jar` in the `platform` directory of the distribution/install image.  The previous `server-chassis-spring.jar` is still present in the `server` directory, to allow time for teams to migrate their operational scripts.  However, this old jar file name is deprecated and will be removed in a future release.
+    * The REST API calls to start and stop OMAG Servers have been moved from the [Administration Services](/services/admin-services/overview) to the [Platform Services](/services/platform-services/overview).  The original Java client and REST API calls are still available, but they have been deprecated and will be removed at a later date.  This change is to separate the operational responsibilities from the configuration responsibilities.  Prior to this change, the operational responsibilities where split between the Platform Services and the Administration Services.
 
 
 --8<-- "snippets/abbr.md"
