--- a/site/docs/release-notes/4-2.md
+++ b/site/docs/release-notes/4-2.md
@@ -2,10 +2,7 @@
 <!-- Copyright Contributors to the Egeria project. -->
 
 
-## Release 4.2 (expected August 2023)
-
-_**These are DRAFT release notes, initially copied from the previous release
-The notes will be updated until & when 4.2 is released**_
+## Release 4.2 (19 July 2023)
 
 ??? functional "Open Metadata Types"
     * The  [*CollectionMembership*](/types/0/0021-Collections) relationship has new properties *stewardTypeName*, *stewardPropertyName*, *userDefinedStatus* and *notes* to improve ability to manage collection membership.
