Add new cts and integration context options
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-3.md
+++ b/site/docs/release-notes/4-3.md
@@ -7,4 +7,13 @@
 _**These are DRAFT release notes, initially copied from the previous release
 The notes will be updated until & when 4.3 is released**_
 
+??? functional "Integration Connector function"
+    Integration connectors can now check to see if they are in the middle of refresh() processing.  This is valuable in multi-threaded operation, for example when processing events.  Typically many of the events that are generated while the connector is being called to `refresh()` are caused by the connector's activity.  There is a new method on the integration context called [`isRefreshInProgress()`](https://odpi.github.io/egeria/org/odpi/openmetadata/frameworks/integration/context/IntegrationContext.html).  It returns true if the connector is currently running its `refresh()` method.  An example of how to use this method is found in the [developer guide](/guides/developer/integration-connectors/overview/#registering-a-listener-with-open-metadata).
+
+
+??? functional "Conformance Test Suite"
+    There is a new option on the repository workbench to allow you to restrict the number of different types of instances that are tested.  By default, all combinations of the types supported by the technology under test, are used when testing the instance methods.  For native repository connectors, that can add up to a lot of tests, taking many hours to run.  In 4.3, we have introduced a new option called *testEntityTypes* that is [added to the workbench configuration](/guides/admin/servers/configuring-a-conformance-test-server). It is set to a list of entity types such as `["Asset", "InformalTag"]` and the tests are restricted to these types, their super types and any relationships and classifications that can connector to these entity types. 
+
+
+
 --8<-- "snippets/abbr.md"
