Add deployment type properties
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-3.md
+++ b/site/docs/release-notes/4-3.md
@@ -14,6 +14,9 @@ The notes will be updated until & when 4.3 is released**_
 ??? functional "Conformance Test Suite"
     There is a new option on the repository workbench to allow you to restrict the number of different types of instances that are tested.  By default, all combinations of the types supported by the technology under test, are used when testing the instance methods.  For native repository connectors, that can add up to a lot of tests, taking many hours to run.  In 4.3, we have introduced a new option called *testEntityTypes* that is [added to the workbench configuration](/guides/admin/servers/configuring-a-conformance-test-server). It is set to a list of entity types such as `["Asset", "InformalTag"]` and the tests are restricted to these types, their super types and any relationships and classifications that can connector to these entity types. 
 
+??? functional "Open Metadata Types"
+    * The  [*HostClusterMember*](/types/0/0035-Complex-Hosts) relationship has new properties *memberRole* and *additionalProperties* to improve ability to describe a host cluster operation.
+    * The  [*DeployedSoftwareComponent*](/types/2/0215-Softeware-Components) entity has a new properties called *deployedImplementationType* to describe the technology supporting a process.
 
 
 --8<-- "snippets/abbr.md"
