Add updates to OMISs
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-3.md
+++ b/site/docs/release-notes/4-3.md
@@ -15,6 +15,16 @@ The notes will be updated until & when 4.3 is released**_
 ??? functional "Integration Connector function"
     Integration connectors can now check to see if they are in the middle of refresh() processing.  This is valuable in multi-threaded operation, for example when processing events.  Typically many of the events that are generated while the connector is being called to `refresh()` are caused by the connector's activity.  There is a new method on the integration context called [`isRefreshInProgress()`](https://odpi.github.io/egeria/org/odpi/openmetadata/frameworks/integration/context/IntegrationContext.html).  It returns true if the connector is currently running its `refresh()` method.  An example of how to use this method is found in the [developer guide](/guides/developer/integration-connectors/overview/#registering-a-listener-with-open-metadata).
 
+??? functional "Open Metadata Integration Services (OMISs) updates"
+    * [Category Integrator OMIS](/services/omis/catalog-integrator/overview) supports the stewardship services from [Asset Manager OMAS](/services/omas/asset-manager/overview) through the [`StewardshipExchangeService`](https://odpi.github.io/egeria/org/odpi/openmetadata/integrationservices/catalog/connector/StewardshipExchangeService.html).
+    * A number of fixes have been made to the context methods of the OMISs that were incorrectly exposing the `userId`, `externalSourceGUID` and `externalSourceName` parameters.  These have been corrected so these values come from the connector's configuration.  The affected OMISs are:
+
+        * [Catalog Integrator OMIS](/services/omis/catalog-integrator/overview)
+        * [Display Integrator OMIS](/services/omis/display-integrator/overview)
+        * [Infrastructure Integrator OMIS](/services/omis/infrastructure-integrator/overview)
+        * [Lineage Integrator OMIS](/services/omis/lineage-integrator/overview)
+        * [Security Integrator OMIS](/services/omis/security-integrator/overview)
+
 ??? functional "Apache Atlas Integration Connector"
     The [Apache Atlas Integration Connector](/connectors/integration/apache-atlas-catalog-integration-connector) has been enhanced to catalog Assets and Lineage from Apache Atlas into the open metadata ecosystem.  It maintains [semantic assignment](/types/3/0370-Semantic-Assignment) relationships between the glossary terms, exchanged in the first release of the connector, with the Apache Atlas assets it finds.
 
