Extend external identifiers
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-3.md
+++ b/site/docs/release-notes/4-3.md
@@ -4,8 +4,7 @@
 
 ## Release 4.3 (expected September 2023)
 
-_**These are DRAFT release notes, initially copied from the previous release
-The notes will be updated until & when 4.3 is released**_
+_**These are DRAFT release notes.  The notes will be updated until & when 4.3 is released**_
 
 ??? functional "Open Metadata Types"
     * The  [*HostClusterMember*](/types/0/0035-Complex-Hosts) relationship has new properties *memberRole* and *additionalProperties* to improve ability to describe a host cluster operation.
