Add RelationalDatabase type
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-3.md
+++ b/site/docs/release-notes/4-3.md
@@ -8,7 +8,8 @@ _**These are DRAFT release notes.  The notes will be updated until & when 4.3 is
 
 ??? functional "Open Metadata Types"
     * The  [*HostClusterMember*](/types/0/0035-Complex-Hosts) relationship has new properties *memberRole* and *additionalProperties* to improve ability to describe a host cluster operation.
-    * The  [*DataSet*](/types/0/0010-Base-Model), [*DataStore*](/types/2/0210-Data-Stores), [*DeployedAPI*](/types/2/0212-Deployed-APIs), [*DeployedSoftwareComponent*](/types/2/0215-Software-Components) and [*DataFeed*](/types/2/0223-Events-and-Logs) entity types each have a new attribute called *deployedImplementationType* to describe the technology supporting the associated component.  This addition is to enable integration connectors to be more precise in describing the technology they are cataloguing.  This attribute is also used in [*SoftwareServerPlatform*](/types/0037-Software-Server-Platforms), [*SoftwareServer*](/types/0/0040-Software-Servers) and [*SoftwareCapability*](/types/0/0042-Software-Capabilities) entity types; along with the [ServerPurpose](/types/0/0041-Server-Purpose) and [*CloudPlatform*](/types/0/0090-Cloud-Platforms-and-Services) classification.  There are subtypes of *DataStore* (*LogFile*, *GraphStore*, *MetadataRepository*) have been modified because they already include the property and duplicate properties in the type hierarchy cause indexing problems in some repositories.  Similarly, there were duplicated *deployedImplementationType* properties in the [*ServerPurpose*](/types/0/0041-Server-Purpose) classification affecting *RepositoryProxy* and *MetadataServer* classifications. 
+    * The  [*DataSet*](/types/0/0010-Base-Model), [*DataStore*](/types/2/0210-Data-Stores), [*DeployedAPI*](/types/2/0212-Deployed-APIs), [*DeployedSoftwareComponent*](/types/2/0215-Software-Components) and [*DataFeed*](/types/2/0223-Events-and-Logs) entity types each have a new attribute called *deployedImplementationType* to describe the technology supporting the associated component.  This addition is to enable integration connectors to be more precise in describing the technology they are cataloguing.  This attribute is also used in [*SoftwareServerPlatform*](/types/0037-Software-Server-Platforms), [*SoftwareServer*](/types/0/0040-Software-Servers) and [*SoftwareCapability*](/types/0/0042-Software-Capabilities) entity types; along with the [ServerPurpose](/types/0/0041-Server-Purpose) and [*CloudPlatform*](/types/0/0090-Cloud-Platforms-and-Services) classification.  There are subtypes of *DataStore* (*LogFile*, *GraphStore*, *MetadataRepository*) have been modified because they already include the property and duplicate properties in the type hierarchy cause indexing problems in some repositories.  Similarly, there were duplicated *deployedImplementationType* properties in the [*ServerPurpose*](/types/0/0041-Server-Purpose) classification affecting *RepositoryProxy* and *MetadataServer* classifications.
+    * A new entity type called [*RelationalDatabase*](/types/2/0224-Databases) has been added to distinguish databases that follow the relational schema and can be accessed through JDBC.
 
 
 ??? functional "Integration Connector function"
