Add August newsletter
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-1.md
+++ b/site/docs/release-notes/4-1.md
@@ -29,7 +29,7 @@
 
 ??? functional "HMS listener"
     The [Hive Metastore (HMS) listener](/connectors/repository/hms/overview/#using-with-the-hive-metastore-listener) runs in the HMS process,
-    and issues Egerie Events when HMS tables and added, dropped or altered. The git repository for the listener is [https://github.com/odpi/egeria-listener-hms](https://github.com/odpi/egeria-listener-hms).
+    and issues Egeria Events when HMS tables and added, dropped or altered. The git repository for the listener is [https://github.com/odpi/egeria-listener-hms](https://github.com/odpi/egeria-listener-hms).
 
 ??? functional "Other functional fixes and enhancements"
 
