--- a/site/docs/release-notes/4-2.md
+++ b/site/docs/release-notes/4-2.md
@@ -2,13 +2,12 @@
 <!-- Copyright Contributors to the Egeria project. -->
 
 
-## Release 4.2 (19 July 2023)
+## Release 4.2 (July 2023)
 
-??? functional "Open Metadata Types"
-    * The  [*CollectionMembership*](/types/0/0021-Collections) relationship has new properties *stewardTypeName*, *stewardPropertyName*, *userDefinedStatus* and *notes* to improve ability to manage collection membership.
+Release 4.2 has a focus on runtime optimization and the start of the work to optimize the process of getting Egeria up and running in a new environment.  This theme is continued in release 4.3.
 
 ??? functional "OMAG Server Topic Configuration"
-    Except when the `no-topics` option is specified, the configuration document helper methods add a connection for both the [InTopic](/concepts/in-topic) and the [OutTopic](/concepts/out-topic) to each Open Metadata Access Service (OMAS) configuration irrespective of whether the particular OMAS supports these topics.  This has no impact at runtime because the OMASs simply do not start topics they do not use.  However, from a set up point of view, it is misleading - and can result in an organization thinking they need to set up (and may be pay for) topics that are not use.
+    Except when the `no-topics` option is specified, the configuration document helper methods add a connection for both the [InTopic](/concepts/in-topic) and the [OutTopic](/concepts/out-topic) to each Open Metadata Access Service (OMAS) configuration irrespective of whether the particular OMAS supports these topics.  This has no impact at runtime because the OMASs simply do not start topics they do not use.  However, from a set-up point of view, it is misleading - and can result in an organization thinking they need to set up (and may be pay for) topics that are not use.
 
     This release adds knowledge of whether an OMAS supports the inTopic and/or OutTopic to the [AccessServiceDescroption](https://github.com/odpi/egeria/blob/main/open-metadata-implementation/admin-services/admin-services-api/src/main/java/org/odpi/openmetadata/adminservices/configuration/registration/AccessServiceDescription.java) class.  This information is used by the configuration helper methods when setting up the access service configuration.  For example, this is the list of topics for `cocoMDS1` at release 4.2:
 
@@ -32,6 +31,12 @@
     * Fixed bug with http headers propagation feature.
     * The name of the JAR file to start the platform is now `omag-server-platform.jar` in the `platform` directory of the distribution/install image.  The previous `server-chassis-spring.jar` is still present in the `server` directory, to allow time for teams to migrate their operational scripts.  However, this old jar file name is deprecated and will be removed in a future release.
     * The REST API calls to start and stop OMAG Servers have been moved from the [Administration Services](/services/admin-services/overview) to the [Platform Services](/services/platform-services/overview).  The original Java client and REST API calls are still available, but they have been deprecated and will be removed at a later date.  This change is to separate the operational responsibilities from the configuration responsibilities.  Prior to this change, the operational responsibilities where split between the Platform Services and the Administration Services.
+
+??? functional "New My Profile Open Metadata View Services (OMVS)"
+    In this release we have added a new view service called [My Profile OMVS](/services/omvs/my-profile/overview) to aid organizations writing user interfaces (UIs).  My Profile OMVS returns information about the supplied user's profile.  It is intended to supply information about the logged-on user.
+
+??? functional "Open Metadata Types"
+    * The  [*CollectionMembership*](/types/0/0021-Collections) relationship has new properties *stewardTypeName*, *stewardPropertyName*, *userDefinedStatus* and *notes* to improve ability to manage collection membership.
 
 
 --8<-- "snippets/abbr.md"
