--- a/site/docs/release-notes/4-3.md
+++ b/site/docs/release-notes/4-3.md
@@ -1,9 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-## Release 4.3 (expected September 2023)
-
-_**These are DRAFT release notes.  The notes will be updated until & when 4.3 is released**_
+## Release 4.3 (September 2023)
 
 Release 4.3 continues the process of improving Egeria's usability.  These changes have some effect on backwards compatibility but will lead to a smoother experience in the long term.
 
