Add missing release notes
Signed-off-by: Ljupcho Palashevski <lpalashevski@gmail.com>

--- a/site/docs/release-notes/4-3.md
+++ b/site/docs/release-notes/4-3.md
@@ -21,6 +21,15 @@ Release 4.3 continues the process of improving Egeria's usability.  These change
 
     Each directory in the assembly includes a README.md file to explain its contents.
 
+??? functional "New OMAG server stand alone runtime"
+    We are releasing tech preview for the stand-alone OMAG server spring boot launcher application. This is the first milestone achieved as result of the work planned in the Cloud Native workgroup. It is step forward to enable additional deployment/operation model more suitable for orchestrated container runtime environment such as Kubernetes. Functionally, it runs the same set of OMAG server capabilities/services as if you are running 'virtual' server instance on an OMAG platform. Irrespective of the operating style the OMAG servers are always interoperable.
+
+    We are working to update the guides on the website to address this new feature.
+
+    If you are curious, you can already try it out by following technical how-to instructions on [github](https://github.com/odpi/egeria/blob/main/open-metadata-implementation/server-chassis/server-chassis-spring/README.md){ target=gh } or check-out the new [`egeria-server`](https://github.com/odpi/egeria-charts/blob/main/charts/egeria-server/README.MD){ target=gh } helm chart showcasing simple OMAG server deployment.
+
+    Feedback is always appreciated.
+
 ??? warning "Database connectors are now in egeria.git"
     The JDBC database connectors are now located in the core Egeria git repository.  The [JDBC Resource Connector](/connectors/resource/jdbc-resource-connector) now includes helper functions when issuing simple SQL commands.
 
@@ -72,4 +81,13 @@ Release 4.3 continues the process of improving Egeria's usability.  These change
     * A new entity type called [*RelationalDatabase*](/types/2/0224-Databases) has been added to distinguish databases that follow the relational schema and can be accessed through JDBC.
     * The  [*Person*](/types/1/0112-People) entity type has a new attribute called *residentCountry* to describe the primary country of residence.  In addition, there is a new attribute called *timeZone* to describe the time zone of the location where this person is located.
 
+??? functional "New Helm chart and dependency updates"
+    New helm chart [`egeria-server`](https://github.com/odpi/egeria-charts/blob/main/charts/egeria-server/) to demonstrate stand-alone omag server deployment in kubernetes.
+
+    Dependency updates include:
+
+    - Egeria docker image 4.3
+    - Strimzi 0.37.0 and Kafka 3.5.1
+    - Jupyter image based on minimal-notebook:lab-4.0.5 and egeria notebook fixes [V4.3](https://github.com/odpi/egeria-jupyter-notebooks/releases/tag/V4.3){ target=gh }
+    
 --8<-- "snippets/abbr.md"
