Add new types and OMVS descriptions for EO data
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/4-3.md
+++ b/site/docs/release-notes/4-3.md
@@ -21,8 +21,8 @@ Release 4.3 continues the process of improving Egeria's usability.  These change
 
     Each directory in the assembly includes a README.md file to explain its contents.
 
-??? functional "New OMAG server stand alone runtime"
-    We are releasing tech preview for the stand-alone OMAG server spring boot launcher application. This is the first milestone achieved as result of the work planned in the Cloud Native workgroup. It is step forward to enable additional deployment/operation model more suitable for orchestrated container runtime environment such as Kubernetes. Functionally, it runs the same set of OMAG server capabilities/services as if you are running 'virtual' server instance on an OMAG platform. Irrespective of the operating style the OMAG servers are always interoperable.
+??? functional "New OMAG server standalone runtime"
+    We are releasing tech preview for the standalone OMAG server spring boot launcher application. This is the first milestone achieved as result of the work planned in the Cloud Native workgroup. It is step forward to enable additional deployment/operation model more suitable for orchestrated container runtime environment such as Kubernetes. Functionally, it runs the same set of OMAG server capabilities/services as if you are running 'virtual' server instance on an OMAG platform. Irrespective of the operating style the OMAG servers are always interoperable.
 
     We are working to update the guides on the website to address this new feature.
 
@@ -37,7 +37,7 @@ Release 4.3 continues the process of improving Egeria's usability.  These change
     The utilities located in `egeria-dev-projects.git` are now located in `egeria.git` under the `open-metadata-resources` module.  They are now included automatically in the `omag-server-platform` assembly.  These utilities are used in the [Developer Dojo](/education/egeria-dojo/developer/overview).  This will be updated to use the new assembly once release 4.3 is shipped.
 
 ??? functional "Extended integration connector function"
-    [Integration connectors](/concepts/integration-connector) can now check to see if they are in the middle of refresh() processing.  This is valuable in multi-threaded operation, for example when processing events.  Typically many of the events that are generated while the connector is being called to `refresh()` are caused by the connector's activity.  There is a new method on the integration context called [`isRefreshInProgress()`](https://odpi.github.io/egeria/org/odpi/openmetadata/frameworks/integration/context/IntegrationContext.html).  It returns true if the connector is currently running its `refresh()` method.  An example of how to use this method is found in the [developer guide](/guides/developer/integration-connectors/overview/#registering-a-listener-with-open-metadata).
+    [Integration connectors](/concepts/integration-connector) can now check to see if they are in the middle of refresh() processing.  This is valuable in multi-threaded operation, for example when processing events.  Typically, many of the events that are generated while the connector is being called to `refresh()` are caused by the connector's activity.  There is a new method on the integration context called [`isRefreshInProgress()`](https://odpi.github.io/egeria/org/odpi/openmetadata/frameworks/integration/context/IntegrationContext.html).  It returns true if the connector is currently running its `refresh()` method.  An example of how to use this method is found in the [developer guide](/guides/developer/integration-connectors/overview/#registering-a-listener-with-open-metadata).
 
 ??? functional "New configuration command for when a cohort member moves platform"
     Servers that are [members of a cohort](/concepts/cohort-member) regularly broadcast their network address to other members to allow them to dynamically configure their federated query support.  This network address is configured in the OMAG Server's [configuration document](/concepts/configuration-document) as the `localRepositoryRemoteConnection`'s endpoint address.  When an OMAG Server is relocated to a new platform, this address must change.  There is a new administration command called [`resetRemoteCohortURL`]() with URL `POST {platformURLRoot}/open-metadata/admin-services/users/{userId}/servers/{serverName}/local-repository/configuration/remote-repository-connector-url`.  The new URL is passed in the request body:
